# DAEX

./: .gitignore  .gitmodules  LICENSE  NPU_BACKEND_REPORT.md  README.md  VERIFICATION_REPORT_T4.md  daex-llama-bridge-audit.md  kotlin-llamacpp-audit.md  qnn-sdk-research-report.md  research-findings.md
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: build.yml  release.yml
AegisMobile/: App.tsx  app.json  package-lock.json  package.json
AegisMobile/android/: settings.gradle
AegisMobile/android/app/: build.gradle
AegisMobile/ios/AegisMobile/: Info.plist
AegisMobile/src/components/: DaexLoader.tsx  LandingPage.tsx  MessageLine.tsx  MobileExecution.tsx  SettingsModal.tsx  Sidebar.tsx  SuggestedPrompts.tsx
AegisMobile/src/hooks/: useAegisInference.ts
AegisMobile/src/services/: llamaService.ts  modelManager.ts
DaexAndroid/: CHANGELOG.md  ROADMAP.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
DaexAndroid/DaexAndroid/: CHANGELOG.md
DaexAndroid/app/: build.gradle.kts
DaexAndroid/app/objectbox-models/: default.json  default.json.bak
DaexAndroid/app/src/main/: AndroidManifest.xml
DaexAndroid/app/src/main/assets/: CHANGELOG.md
DaexAndroid/scripts/: gradle-test.sh
DaexLlama/: NPU_INTEGRATION_REPORT.md  README.md  TODO.md  build.gradle.kts  proguard-rules.pro  review_findings.md  verification_report.md
DaexLlama/src/main/: proguard-rules.pro
DaexLlama/src/main/cpp/: API_SURFACE_MAP.md  CMakeLists.txt  KOTLIN_LLAMACPP_AUDIT.md
DaexLlama/src/main/cpp/src/: daex_llama_bridge-audit.md  daex_llama_bridge.cpp
DaexMobile/: App.tsx  package-lock.json  package.json
DaexMobile/android/: settings.gradle
DaexMobile/android/app/: build.gradle
DaexMobile/android/app/src/main/: AndroidManifest.xml
DaexMobile/ios/: Podfile
DaexMobile/ios/AegisMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
DaexMobile/ios/AegisMobile.xcodeproj/: project.pbxproj
DaexMobile/ios/AegisMobile.xcodeproj/xcshareddata/xcschemes/: AegisMobile.xcscheme
DaexMobile/src/components/: DaexLogo.tsx  LandingPage.tsx  MessageLine.tsx  MobileExecution.tsx  ModelSelectorModal.tsx  SettingsModal.tsx  Sidebar.tsx
DaexMobile/src/hooks/: useDaexInference.ts
DaexMobile/src/services/: modelBank.ts  modelManager.ts
agents/: README.md  build-agent.md  code-review-agent.md  hypothesis-agent.md  research-agent.md  testing-agent.md  web-research-agent.md
docs/: Aegis Plan.md  Android_Agent_Architecture.md  Android_Tool_Capabilities.md  GenAI_Architectural_Research.md  Genie_API_Deep_Dive.md  Genie_NPU_Transition_Blueprint.md  Icarus_DDA_Integration.md  NPU_Griffin_Analysis.md  Software_Design_Document.md  Software_Requirements_Document.md  TODO.md
qnn-research/: extract_genie.py  extract_phase1.py
research/: llama-cpp-android-integration-findings.md
scripts/: build-daex-llama.sh
(+54 files in other folders)
